--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "live": "tsc --watch"
+    "start": "tsc --watch & lite-server"
   },
   "repository": {
     "type": "git",
